# Multimedia

./: README.md
2048-Cversion/: game.c  game.h  main  output.c  output.h
没完成消消乐/: Eraser.cc  Eraser.h  Lcd.cc  Lcd.h  Makefile  head.h  main.cc
消消乐/: earse.cc  消消乐.md
贪吃蛇/: Makefile  game.c  game.h  head.h  lcd.c  lcd.h  main.c  ts.c  ts.h  word.c  word.h
音乐播放器/: CMakeLists.txt  main.cc
音乐播放器/include/: DCList.h  lcd.h  madplay.h  mplayer.h  ts.h
音乐播放器/src/: DCList.cc  lcd.cc  madplay.cc  mplayer.cc  ts.cc
